<resources>
    <string name="app_name">NYTimes News Search</string>
    <string name="action_settings">Settings</string>
    <string name="hint">Enter Search Query</string>
    <string name="search">Search</string>
    <string name="title_activity_article">ArticleActivity</string>
    <string name="Date">Begin Date</string>
    <string name="sort">Sort Order</string>
    <string name="desk">News Category</string>
    <string name="art">Arts</string>
    <string name="sport">Sports</string>
    <string name="Fashoin"><![CDATA[Fashion & Style]]></string>
</resources>
